feat: introduce DTO records for various requests and update controller methods to use them